# iPhoneStockManagementSystem

./: .gitignore  Apple_iPad_JAN_full_JP_2026-01-23.csv  CMakeLists.txt  Magic_Keyboard_SKUs_JAN_partial_verified_2026-01-23.csv  MainWindow.ui  Mainwindow.ui  README.md  WINDOWS_BUILD.md  app.rc  app_icon_instructions.txt  apple_watch_jp_sku_jan_2026-01-23.csv  build_windows.bat  deploy_windows.ps1  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  temp_data.txt
QXlsx-master/: HowToSetProject-cmake.md  HowToSetProject.md
sounds/: .gitkeep  README.md
